---
source: minijinja/tests/test_parser.rs
description: "{{ super() }}\n{{ loop.cycle(1, 2) }}\n{{ self.foo() }}\n{{ foo(1, 2, a=3, b=4) }}"
input_file: minijinja/tests/parser-inputs/call.txt
---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: Call {
                    expr: Var {
                        id: "super",
                    } @ 1:3-1:8,
                    args: [],
                } @ 1:8-1:10,
            } @ 1:0-1:10,
            EmitRaw {
                raw: "\n",
            } @ 1:13-2:0,
            EmitExpr {
                expr: Call {
                    expr: GetAttr {
                        expr: Var {
                            id: "loop",
                        } @ 2:3-2:7,
                        name: "cycle",
                    } @ 2:7-2:13,
                    args: [
                        Const {
                            value: 1,
                        } @ 2:14-2:15,
                        Const {
                            value: 2,
                        } @ 2:17-2:18,
                    ],
                } @ 2:13-2:19,
            } @ 2:0-2:19,
            EmitRaw {
                raw: "\n",
            } @ 2:22-3:0,
            EmitExpr {
                expr: Call {
                    expr: GetAttr {
                        expr: Var {
                            id: "self",
                        } @ 3:3-3:7,
                        name: "foo",
                    } @ 3:7-3:11,
                    args: [],
                } @ 3:11-3:13,
            } @ 3:0-3:13,
            EmitRaw {
                raw: "\n",
            } @ 3:16-4:0,
            EmitExpr {
                expr: Call {
                    expr: Var {
                        id: "foo",
                    } @ 4:3-4:6,
                    args: [
                        Const {
                            value: 1,
                        } @ 4:7-4:8,
                        Const {
                            value: 2,
                        } @ 4:10-4:11,
                        Map {
                            keys: [
                                Const {
                                    value: "a",
                                } @ 4:13-4:14,
                                Const {
                                    value: "b",
                                } @ 4:18-4:19,
                            ],
                            values: [
                                Const {
                                    value: 3,
                                } @ 4:15-4:16,
                                Const {
                                    value: 4,
                                } @ 4:20-4:21,
                            ],
                        } @ 4:13-4:21,
                    ],
                } @ 4:6-4:22,
            } @ 4:0-4:22,
        ],
    } @ 0:0-4:25,
)
